[package]
name = "clounar"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "clounar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
rquest = { version = "5", features = ["json", "cookies", "websocket"] }
rquest-util = { version = "2", features = ["emulation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v5"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
itertools = "0.13"
llm_json = "1"
dirs = "5"
strum = { version = "0.28", features = ["derive"] }
ignore = "0.4"